--- a/package.json
+++ b/package.json
@@ -3,24 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-plugin-import": "^1.7.0",
     "electron": "^1.8.4",
     "electron-packager": "^12.0.0",
     "foreman": "^2.0.0",
+    "react-app-rewired": "^1.5.0",
     "react-scripts": "1.1.4"
   },
   "dependencies": {
+    "antd": "^3.4.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
   "homepage": "./",
   "main": "src/electron-starter.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
     "electron": "electron .",
     "dev": "nf start -p 3000",
-    "package":"electron-packager . app exe"
+    "package": "electron-packager . app exe"
   }
 }
