--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "electron": "^1.8.4",
     "electron-packager": "^12.0.0",
     "foreman": "^2.0.0",
+    "react-app-rewire-less-modules": "^1.3.0",
     "react-app-rewired": "^1.5.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "2.0.0-next.9754a231"
   },
   "dependencies": {
     "antd": "^3.4.1",
@@ -25,5 +26,18 @@
     "electron": "electron .",
     "dev": "nf start -p 3000",
     "package": "electron-packager . app exe"
+  },
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">1%",
+      "last 4 versions",
+      "Firefox ESR",
+      "not ie < 11"
+    ]
   }
 }
