--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "electron": "^1.8.4",
     "electron-packager": "^12.0.0",
     "foreman": "^2.0.0",
+    "nodemon": "^1.17.3",
     "react-app-rewire-less-modules": "^1.3.0",
     "react-app-rewired": "^1.5.0",
     "react-scripts": "2.0.0-next.9754a231"
@@ -17,14 +18,14 @@
     "react-dom": "^16.3.1"
   },
   "homepage": "./",
-  "main": "src/electron-starter.js",
+  "main": "src/electron_main/electron-starter.js",
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
-    "electron": "electron .",
     "dev": "nf start -p 3000",
+    "electron":"electron . ",
     "package": "electron-packager . app exe"
   },
   "browserslist": {
