--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "devDependencies": {
     "babel-plugin-import": "^1.7.0",
+    "cross-env": "^5.1.4",
+    "debug": "^3.1.0",
     "electron": "^1.8.4",
     "electron-packager": "^12.0.0",
-    "foreman": "^2.0.0",
     "nodemon": "^1.17.3",
     "react-app-rewire-less-modules": "^1.3.0",
     "react-app-rewired": "^1.5.0",
@@ -24,8 +25,8 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
-    "dev": "nf start -p 3000",
-    "electron":"electron . ",
+    "dev": "cross-env node ./src/electron-wait-react.js",
+    "electron": "electron . ",
     "package": "electron-packager . app exe"
   },
   "browserslist": {
