--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "antd": "^3.4.1",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "sql.js": "^0.5.0"
   },
   "homepage": "./",
   "main": "src/electron_main/electron-starter.js",
