--- a/package.json
+++ b/package.json
@@ -3,26 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@types/jest": "^24.0.0",
+    "@types/node": "^11.9.0",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
     "babel-plugin-import": "^1.7.0",
     "cross-env": "^5.1.4",
     "debug": "^3.1.0",
-    "electron": "^1.8.4",
-    "electron-packager": "^12.0.0",
+    "electron": "^4.0.0",
+    "electron-packager": "^13.0.0",
     "nodemon": "^1.17.3",
     "react-app-rewire-less-modules": "^1.3.0",
     "react-app-rewired": "^1.5.0",
-    "react-scripts": "2.0.0-next.9754a231"
+    "react-scripts": "^2.1.5"
   },
   "dependencies": {
     "antd": "^3.4.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "sql.js": "^0.5.0"
+    "sql.js": "^0.5.0",
+    "typescript": "^3.3.3"
   },
   "homepage": "./",
   "main": "src/electron_main/electron-starter.js",
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "react-scripts start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
