--- a/package.json
+++ b/package.json
@@ -229,6 +229,8 @@
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "node-sass": "^4.11.0",
     "opencollective-postinstall": "^2.0.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
