--- a/package.json
+++ b/package.json
@@ -229,6 +229,8 @@
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "lint-staged": "^8.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "mobx": "^5.9.0",
