--- a/package.json
+++ b/package.json
@@ -208,6 +208,7 @@
     "css-loader": "^2.1.0",
     "css-modules-typescript-loader": "^2.0.2",
     "detect-port": "^1.3.0",
+    "dts-css-modules-loader": "^1.0.1",
     "electron": "^4.2.4",
     "electron-builder": "^20.38.4",
     "electron-devtools-installer": "^2.2.4",
