--- a/package.json
+++ b/package.json
@@ -277,6 +277,7 @@
     "electron-updater": "^4.0.6",
     "fs-extra": "^8.0.1",
     "history": "^4.7.2",
+    "json2xml": "^0.1.3",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
