--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "lint-staged": {
     "*.{js,jsx}": [
-      "cross-env NODE_ENV=development eslint --cache --format=pretty",
+      "cross-env NODE_ENV=development eslint --cache --format=pretty --fix",
       "prettier --ignore-path .eslintignore --single-quote --write",
       "git add"
     ],
