--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-e2e": "cross-env E2E_BUILD=true yarn build",
     "build-main": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.main.prod.babel.js --colors",
     "build-renderer": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.renderer.prod.babel.js --colors",
-    "dev": "cross-env START_HOT=1 node -r @babel/register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 yarn start-renderer-dev",
+    "dev": "UPGRADE_EXTENSIONS=1 cross-env START_HOT=1 node -r @babel/register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 yarn start-renderer-dev",
     "lint": "cross-env NODE_ENV=development eslint --cache --format=pretty .",
     "lint-fix": "yarn --silent lint --fix; exit 0",
     "lint-styles": "stylelint --ignore-path .eslintignore '**/*.*(css|scss)' --syntax scss",
@@ -35,6 +35,11 @@
   },
   "lint-staged": {
     "*.{js,jsx}": [
+      "cross-env NODE_ENV=development eslint --cache --format=pretty --fix",
+      "prettier --ignore-path .eslintignore --single-quote --write",
+      "git add"
+    ],
+    "*.{ts,tsx}": [
       "cross-env NODE_ENV=development eslint --cache --format=pretty --fix",
       "prettier --ignore-path .eslintignore --single-quote --write",
       "git add"
@@ -193,9 +198,7 @@
     "@types/react-redux": "^6.0.12",
     "@types/react-router-dom": "^4.3.1",
     "@types/redux-logger": "^3.0.6",
-    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-import": "^1.11.0",
@@ -228,6 +231,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-testcafe": "^0.2.1",
+    "eslint-plugin-typescript": "^0.14.0",
     "fbjs-scripts": "^1.0.1",
     "file-loader": "^3.0.1",
     "husky": "^1.3.1",
@@ -259,7 +263,8 @@
     "testcafe-live": "^0.1.4",
     "testcafe-react-selectors": "^3.0.2",
     "ts-loader": "^5.3.2",
-    "typescript": "^3.2.2",
+    "typescript": "^3.5.2",
+    "typescript-eslint-parser": "^22.0.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.3",
     "webpack-bundle-analyzer": "^3.0.3",
@@ -271,6 +276,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
     "antd": "^3.13.6",
+    "cheerio": "^1.0.0-rc.3",
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
@@ -287,7 +293,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "source-map-support": "^0.5.9"
+    "source-map-support": "^0.5.9",
+    "superagent": "^5.1.0"
   },
   "devEngines": {
     "node": ">=7.x",
