--- a/package.json
+++ b/package.json
@@ -192,6 +192,7 @@
     "@babel/register": "^7.0.0",
     "@types/fs-extra": "^7.0.0",
     "@types/jest": "^23.3.11",
+    "@types/puppeteer": "^1.12.4",
     "@types/ramda": "^0.26.9",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
@@ -284,6 +285,7 @@
     "fs-extra": "^8.0.1",
     "history": "^4.7.2",
     "json2xml": "^0.1.3",
+    "puppeteer": "^1.18.1",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -294,7 +296,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "source-map-support": "^0.5.9",
-    "superagent": "^5.1.0"
+    "superagent": "^5.1.0",
+    "xml-js": "^1.6.11"
   },
   "devEngines": {
     "node": ">=7.x",
