--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
     "promise/always-return": "error",
     "promise/catch-or-return": "error",
     "promise/no-native": "off",
+    "react/prop-types": "off",
     "react/sort-comp": [
       "error",
       {
@@ -45,7 +46,7 @@
     ],
     "react/prefer-stateless-function": "off"
   },
-  "plugins": ["import", "promise", "compat", "react", "typescript"],
+  "plugins": ["import", "promise", "compat", "typescript"],
   "settings": {
     "import/resolver": {
       "webpack": {
