--- a/.eslintrc
+++ b/.eslintrc
@@ -11,12 +11,13 @@
   },
   "rules": {
     "no-unused-vars": "off",
+    "no-await-in-loop": "off",
+    "import/no-unresolved": "off",
     "arrow-parens": ["off"],
     "compat/compat": "error",
     "consistent-return": "off",
     "comma-dangle": "off",
     "generator-star-spacing": "off",
-    "import/no-unresolved": "error",
     "import/no-extraneous-dependencies": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "no-console": "off",
