fix(build): fix mac package error

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-main": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.main.prod.babel.js --colors",
     "build-renderer": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.renderer.prod.babel.js --colors",
     "dev": " cross-env START_HOT=1 UPGRADE_EXTENSIONS=1 node -r @babel/register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 yarn start-renderer-dev",
-    "lint": "cross-env NODE_ENV=development eslint --cache --format=pretty .",
+    "lint": "lint-staged",
     "lint-fix": "yarn --silent lint --fix; exit 0",
     "lint-styles": "stylelint --ignore-path .eslintignore '**/*.*(css|scss)' --syntax scss",
     "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0",
@@ -19,6 +19,7 @@
     "package-ci": "yarn postinstall && yarn build && electron-builder --publish always",
     "package-linux": "yarn build && electron-builder build --linux",
     "package-win": "yarn build && electron-builder build --win --x64",
+    "package-mac": "yarn build && electron-builder build --mac",
     "postinstall": "electron-builder install-app-deps package.json && yarn build-dll && opencollective-postinstall",
     "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{*{js,jsx,json},babelrc,eslintrc,prettierrc,stylelintrc}'",
     "postlint-styles-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.{css,scss}'",
@@ -192,7 +193,6 @@
     "@babel/register": "^7.0.0",
     "@types/fs-extra": "^7.0.0",
     "@types/jest": "^23.3.11",
-    "@types/puppeteer": "^1.12.4",
     "@types/ramda": "^0.26.9",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
@@ -276,6 +276,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
+    "@types/puppeteer-core": "^1.9.0",
     "antd": "^3.13.6",
     "cheerio": "^1.0.0-rc.3",
     "devtron": "^1.4.0",
@@ -285,7 +286,7 @@
     "fs-extra": "^8.0.1",
     "history": "^4.7.2",
     "json2xml": "^0.1.3",
-    "puppeteer": "^1.18.1",
+    "puppeteer-core": "^1.20.0",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
