feat(scrape):多媒体信息展示

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
   "rules": {
     "no-unused-vars": "off",
     "no-loop-func": "off",
+    "no-nested-ternary": "off",
     "no-await-in-loop": "off",
     "import/no-unresolved": "off",
     "arrow-parens": ["off"],
