--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
   "rules": {
     "no-unused-vars": "off",
     "no-underscore-dangle": "off",
+    "camelcase": "off",
     "no-loop-func": "off",
     "no-nested-ternary": "off",
     "no-await-in-loop": "off",
