--- a/package.json
+++ b/package.json
@@ -263,6 +263,7 @@
     "@types/puppeteer-core": "^1.9.0",
     "antd": "^3.23.3",
     "cheerio": "^1.0.0-rc.3",
+    "classnames": "^2.2.6",
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
