--- a/package.json
+++ b/package.json
@@ -261,7 +261,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@types/puppeteer-core": "^1.9.0",
-    "@vdts/collect-video": "^0.5.3",
+    "@vdts/collect-video": "^0.6.1",
     "antd": "^3.23.3",
     "cheerio": "^1.0.0-rc.3",
     "classnames": "^2.2.6",
@@ -283,6 +283,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "source-map-support": "^0.5.9",
     "superagent": "^5.1.0",
     "typesafe-actions": "^4.4.2",
