--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
+if: tag IS present
 matrix:
   allow_failures:
+    - os: linux
     - os: windows
   include:
     - os: osx
@@ -77,8 +79,3 @@ before_script:
 script:
   - yarn package-ci
   - yarn lint
-  - yarn flow
-  # HACK: Temporarily ignore `yarn test` on linux
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn test; fi
-  - yarn build-e2e
-  - yarn test-e2e
