chore(dependencies): Update hot-loader, eliminate warnings

--- a/package.json
+++ b/package.json
@@ -276,8 +276,8 @@
     "puppeteer-core": "^1.20.0",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-hot-loader": "^4.6.3",
+    "@hot-loader/react-dom": "^16.8.6",
+    "react-hot-loader": "^4.12.11",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
