feat(setting):setting modal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "@actions": ["./app/actions"],
       "@types": ["./app/types"],
       "@components/*": ["./app/components/*"],
-      "@constants": ["./app/constants"],
+      "@config": ["./app/config-store"],
+      "@constants/*": ["./app/constants/*"],
       "@utils": ["./app/utils"]
     }
   },
