--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
   },
   "rules": {
     "no-unused-vars": "off",
+    "import/prefer-default-export": "off",
     "no-underscore-dangle": "off",
     "camelcase": "off",
     "no-loop-func": "off",
