--- a/package.json
+++ b/package.json
@@ -261,6 +261,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
+    "@hot-loader/react-dom": "^16.8.6",
     "@types/puppeteer-core": "^1.9.0",
     "@vdts/collect-video": "^0.6.2",
     "antd": "^3.23.3",
@@ -269,20 +270,17 @@
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
+    "electron-store": "^5.0.0",
     "electron-updater": "^4.0.6",
     "fs-extra": "^8.0.1",
-    "history": "^4.7.2",
     "json2xml": "^0.1.3",
     "puppeteer-core": "^1.20.0",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
-    "@hot-loader/react-dom": "^16.8.6",
+    "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.11",
     "react-redux": "^6.0.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "source-map-support": "^0.5.9",
