--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "u-scraper",
   "productName": "uScraper",
-  "version": "0.1.0-beta",
+  "version": "0.1.0",
   "description": "A scraper that switches between normal mode and gentleman mode, built on Eletron, React",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
@@ -274,6 +274,7 @@
     "electron-updater": "^4.0.6",
     "fs-extra": "^8.0.1",
     "json2xml": "^0.1.3",
+    "lodash-es": "^4.17.15",
     "puppeteer-core": "^1.20.0",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
