--- a/package.json
+++ b/package.json
@@ -176,6 +176,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@babel/register": "^7.0.0",
+    "@types/fluent-ffmpeg": "^2.1.11",
     "@types/fs-extra": "^7.0.0",
     "@types/jest": "^23.3.11",
     "@types/ramda": "^0.26.9",
@@ -272,6 +273,7 @@
     "electron-log": "^2.2.17",
     "electron-store": "^5.0.0",
     "electron-updater": "^4.0.6",
+    "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^8.0.1",
     "json2xml": "^0.1.3",
     "lodash-es": "^4.17.15",
