--- a/package.json
+++ b/package.json
@@ -277,6 +277,7 @@
     "fs-extra": "^8.0.1",
     "json2xml": "^0.1.3",
     "lodash-es": "^4.17.15",
+    "p-limit": "^2.2.1",
     "puppeteer-core": "^1.20.0",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
