--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     "@types/react-redux": "^6.0.12",
     "@types/react-router-dom": "^4.3.1",
     "@types/redux-logger": "^3.0.6",
+    "@types/request-promise": "^4.1.44",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-dev-expression": "^0.2.1",
@@ -272,9 +273,11 @@
     "electron-log": "^2.2.17",
     "electron-store": "^5.0.0",
     "electron-updater": "^4.0.6",
+    "ffmetadata": "^1.5.0",
     "fs-extra": "^8.0.1",
     "json2xml": "^0.1.3",
     "lodash-es": "^4.17.15",
+    "music-metadata": "^4.8.0",
     "puppeteer-core": "^1.20.0",
     "ramda": "^0.26.1",
     "react": "^16.7.0",
@@ -284,6 +287,7 @@
     "redux": "^4.0.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "simple-netease-cloud-music": "^0.4.4",
     "source-map-support": "^0.5.9",
     "superagent": "^5.1.0",
     "typesafe-actions": "^4.4.2",
