--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@actions/core": "^1.2.0",
     "@babel/core": "^7.7.2",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
